--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --color: lightgray;
   --border-radius: 10px;
+  --image: none;
 }
 
 body {
@@ -11,13 +12,14 @@ body {
   overflow: hidden;
 }
 
-#puz,
-#puzz {
-  position: absolute;
-  border-radius: var(--border-radius) 0 var(--border-radius) 0;
-  user-select: none;
+/* puzzle box */
+#puz_box {
+  width: 100%;
+  height: 100vh;
+  position: relative;
 }
 
+/* puzzle target area */
 #puz {
   width: 300px;
   height: 300px;
@@ -27,25 +29,40 @@ body {
   transform: translate(-50%, -50%);
   border: 3px dashed lightgray;
   overflow: hidden;
+  border-radius: var(--border-radius);
 }
 
-#puzz {
-  left: 0;
-  top: 0;
-  border: 0;
-}
-
-
+/* empty slots */
 #puz i {
-
   width: 100px;
   height: 100px;
+  position: absolute;
   outline: 1px dashed lightgray;
 }
-#puzz i {
-  touch-action: none;
+
+/* slot positions */
+#puz .first { left: 0; top: 0; }
+#puz .secon { left: 100px; top: 0; }
+#puz .third { left: 200px; top: 0; }
+
+#puz .fourt { left: 0; top: 100px; }
+#puz .fifth { left: 100px; top: 100px; }
+#puz .sixth { left: 200px; top: 100px; }
+
+#puz .seven { left: 0; top: 200px; }
+#puz .eight { left: 100px; top: 200px; }
+#puz .ninth { left: 200px; top: 200px; }
+
+/* puzzle pieces area */
+#puzz {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
+/* puzzle pieces */
 #puzz i {
   position: absolute;
   width: 100px;
@@ -53,14 +70,15 @@ body {
   background: var(--color);
   background-image: var(--image);
   background-size: 300px 300px;
-  cursor: move;
-  box-shadow: 0 0 10px rgba(0, 0, 0, .25);
-  touch-action:none;
-  user-select:none;
+ cursor: grab;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  touch-action: none;
+  user-select: none;
+  border-radius: 6px;
 }
 
+/* correct background positions */
 .first {
-  border-top-left-radius: var(--border-radius);
   background-position: left top !important;
 }
 
@@ -69,7 +87,6 @@ body {
 }
 
 .third {
-  /*   border-top-right-radius:var(--border-radius); */
   background-position: right top !important;
 }
 
@@ -86,7 +103,6 @@ body {
 }
 
 .seven {
-  /*   border-bottom-left-radius:var(--border-radius); */
   background-position: left bottom !important;
 }
 
@@ -95,56 +111,27 @@ body {
 }
 
 .ninth {
-  border-bottom-right-radius: var(--border-radius);
   background-position: right bottom !important;
 }
 
-.clicked {
-  box-shadow: 0 0 0 4px gray !important;
-}
-
+/* when dropped */
 .dropped {
-  background: var(--color);
   background-image: var(--image);
   background-size: 300px 300px;
+  outline: none !important;
 }
 
+/* when piece is completed */
 .done {
   opacity: 0;
   pointer-events: none;
 }
 
-#puzz {
-  position: relative;
-}
-
-#puzz i {
-  position: absolute;
-  cursor: grab;
-}
-
-
-.allDone {
-  animation: allDone 1s linear forwards;
-  border: 3px solid lightgray !important;
-}
-
-.allDone i {
-  outline: 0 !important;
-}
-
-@keyframes allDone {
-  50% {
-    transform: translate(-50%, -50%) scale(1.2);
-  }
-}
-
 #clicks {
-  font-size: 8px;
+  font-size: 14px;
   font-family: monospace;
   position: absolute;
-  bottom: 5px;
-  right: 5px;
-
+  bottom: 10px;
+  right: 10px;
 }
 
